# solana-score-tracker

./: Anchor.toml  README.md
client/: client.ts
programs/score-tracker/: Cargo.toml
programs/score-tracker/src/: lib.rs
tests/: anchor.ts
